--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,9 @@ p {
 
 .container {
     width: 100%;
-    max-width: 1170px;
+    max-width: 1200px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
         /* HEADER */
@@ -253,5 +254,138 @@ p {
 
 .works__text {
     font-size: 14px;
+    color: #fff;
+}
+
+        /* TEAM */
+
+.team {
+    margin: 100px 0 70px;
+}
+
+.team__inner {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+}
+
+.team__item {
+    width: 25%;
+    padding: 0 15px;
+    margin-bottom: 30px;
+}
+
+.team__photo {
+    margin-bottom: 20px;
+
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.team__name {
+    margin-bottom: 8px;
+
+    font-size: 22px;
+    color: #2d3033;
+}
+
+.team__prof {
+    margin-bottom: 15px;
+
+    font-size: 13px;
+    color: #e84545;
+    text-transform: uppercase;
+}
+
+.team__text {
+    margin-bottom: 20px;
+
+    font-size: 14px;
+    color: #6c7279;
+    line-height: 1.5;
+}
+
+        /* SOCIAL */
+
+.social {
+    display: flex;
+}
+
+.social__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 17px;
+    color: #c6cacc;
+    text-decoration: none;
+
+    margin-right: 4px;
+    width: 40px;
+    height: 40px;
+
+    background-color: #fff;
+    border: 1px solid #e8ecee;
+
+    transition: background .2s linear, color .2s linear, border .2s linear;
+}
+
+.social__item:hover {
+    background-color: #e84545;
+    color: #fff;
+    border: #e84545;
+}
+
+        /* REVIEWS */
+
+.reviews {
+    overflow: hidden;
+    background-color: #53354a;
+}
+
+.reviews__item {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.reviews__photo {
+    width: 50%;
+    height: 500px;
+    position: relative;
+}
+
+.reviews__img {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    z-index: 1;
+
+    transform: translateY(-50%);
+}
+
+.reviews__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width: 50%;
+    padding-left: 80px;
+}
+
+.reviews__text {
+    margin-bottom: 20px;
+
+    font-family: 'Cardo', serif;
+    font-size: 36px;
+    color: #fff;
+    font-style: italic;
+    line-height: 1.2;
+}
+
+.reviews__author {
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
     color: #fff;
 }
