Завершил верстку страницы

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ p {
     font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
+    text-align: center;
 
     transition: background-color .1s linear;
 }
@@ -312,6 +313,10 @@ p {
     display: flex;
 }
 
+.social--footer {
+    justify-content: center;
+}
+
 .social__item {
     display: flex;
     justify-content: center;
@@ -334,6 +339,22 @@ p {
 .social__item:hover {
     background-color: #e84545;
     color: #fff;
+    border: #e84545;
+}
+
+.social--footer .social__item {
+    background-color: #3a3e64;
+    border-width: 2px;
+    border-color: #fff;
+    border-radius: 2px;
+
+    color: #fff;
+
+    transition: background .2s linear, border .2s linear;
+}
+
+.social--footer .social__item:hover {
+    background-color: #e84545;
     border: #e84545;
 }
 
@@ -388,4 +409,94 @@ p {
     font-weight: 700;
     text-transform: uppercase;
     color: #fff;
+}
+
+        /* DOWNLOAD */
+
+.download {
+    margin: 90px 0;
+
+    text-align: center;
+}
+
+.download__title {
+    margin-bottom: 10px;
+
+    font-size: 28px;
+    color: #2d3033;
+    font-weight: 300;
+}
+
+.download__text {
+    margin-bottom: 30px;
+
+    font-size: 13px;
+    color: #2d3033;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+        /* FOOTER */
+
+.footer {
+    background-color: #3a3e64;
+}
+
+.footer__inner {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 70px 0;
+}
+
+.footer__block {
+    width: 33.33333%;
+    padding: 0 15px;
+
+    text-align: center;
+}
+
+.footer__title {
+    margin-bottom: 10px;
+
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.footer__address {
+    font-size: 14px;
+    font-style: normal;
+    color: rgba(255, 255, 255, .5);
+    line-height: 1.5;
+}
+
+.footer__text {
+    font-size: 14px;
+    color: rgba(255, 255, 255, .5);
+    line-height: 1.5;
+}
+
+        /* COPYRIGHT */
+
+.copyright {
+    padding: 20px 0;
+
+    background-color: #313454;
+}
+
+.copyright__text {
+    text-align: center;
+    font-size: 14px;
+    color: #808080;
+    line-height: 1.5;
+}
+
+.copyright__text span {
+    color: #fff;
+}
+
+.copyright__icon {
+    font-size: 11px;
+    color:#e84545 ;
 }
