--- a/css/style.css
+++ b/css/style.css
@@ -500,3 +500,109 @@ p {
     font-size: 11px;
     color:#e84545 ;
 }
+
+        /* BURGER */
+
+.burger {
+    display: none;
+    padding: 9px 2px;
+    cursor: pointer;
+
+    background: none;
+    border: 0;
+}
+
+.burger__item {
+    display: block;
+    width: 30px;
+    height: 3px;
+    margin-top: -3px;
+
+    background-color: #fff;
+
+    font-size: 0;
+    color: transparent;
+
+    position: relative;
+}
+
+.burger__item::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+
+    background-color: #fff;
+
+    position: absolute;
+    top: -8px;
+    left: 0;
+    z-index: 1;
+}
+
+.burger__item::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+
+    background-color: #fff;
+
+    position: absolute;
+    top: 8px;
+    left: 0;
+    z-index: 1;
+}
+
+                /* MEDIA MAX-WIDTH 1200PX */
+
+@media (max-width: 1200px) {
+
+        /* INTRO */
+
+
+}
+
+                /* MEDIA MAX-WIDTH 990PX */
+
+@media (max-width: 990px) {
+
+        /* INTRO */
+    
+    .intro__title {
+        font-size: 40px;
+    }
+
+        /* NAV */
+
+    .nav {
+        display: none;
+    }
+
+        /* BURGER */
+
+    .burger {
+        display: block;
+    }
+
+}
+
+                /* MEDIA MAX-WIDTH 767PX */
+
+@media (max-width: 767px) {
+
+        /* INTRO */
+
+    .intro {
+        height: auto;
+        padding: 130px 0 30px;
+    }
+
+    .intro__title {
+        font-size: 30px;
+    }
+
+    .intro__suptitle {
+        margin-bottom: 30px;
+        font-size: 16px;
+    }
+
+}
