--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,8 @@ p {
 }
 
 .works__img {
+    min-width: 100%;
+    
     position: absolute;
     top: 50%;
     left: 50%;
@@ -552,6 +554,18 @@ p {
     z-index: 1;
 }
 
+                /* MEDIA MAX-WIDTH 1300PX */
+
+@media (max-width: 1300px) {
+
+        /* WORKS */
+
+.works__item {
+    width: 50%;
+}
+
+}
+
                 /* MEDIA MAX-WIDTH 1200PX */
 
 @media (max-width: 1200px) {
@@ -583,6 +597,47 @@ p {
         display: block;
     }
 
+        /* FEATURES */
+    
+    .features__item {
+        width: 50%;
+    }
+
+        /* TEAM */
+
+    .team__item {
+        width: 50%;
+
+        text-align: center;
+    }
+
+    .team__photo {
+        margin: 0 auto 20px;
+    }
+
+        /* SOCIAL */
+
+    .social {
+        justify-content: center;
+    }
+
+        /* REVIEWS */
+
+    .reviews__photo{
+        margin-bottom: 40px;
+        width: 100%;
+    }
+
+    .reviews__content {
+        width: 100%;
+        padding-left: 0;
+        padding-bottom: 40px;
+    }
+
+    .reviews__img {
+        right: -15px;
+    }
+
 }
 
                 /* MEDIA MAX-WIDTH 767PX */
@@ -604,5 +659,83 @@ p {
         margin-bottom: 30px;
         font-size: 16px;
     }
+
+        /* FEATURES */
+    
+    .features {
+        margin: 40px 0;
+    }
+    
+    .features__item {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+        /* WORKS */
+
+    .works__item {
+        width: 100%;
+        height: 300px;
+    }
+
+        /* TEAM */
+
+    .team {
+        margin: 60px 0 30px;
+    }
+
+    .team__item {
+        width: 100%;
+    }
+
+        /* REVIEWS */
+
+    .reviews__img {
+        right: -100px;
+    }
+
+    .reviews__text {
+        font-size: 25px;
+    }
+
+        /* DOWLOAD */
+
+    .download {
+        margin: 50px 0;
+    }
+
+    .download__title {
+        font-size: 24px;
+    }
+
+        /* FOOTER */
+
+    .footer__block {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+           margin-bottom: 30px;
+    }
+
+    .footer__block:last-child {
+        margin-bottom: 0;
+    }
+
+    .footer__inner {
+         padding: 30px 0;
+    }
+
+}
+
+                /* MEDIA MAX-WIDTH 767PX */
+
+@media (max-width: 414px) {
+
+        /* REVIEWS */
+
+    .reviews__img {
+        right: -190px;
+    } 
 
 }
