Прикрутил JS к странице

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,20 @@ p {
     z-index: 1000;
 }
 
+.header.fixed {
+    height: auto;
+
+    position: fixed;
+
+    background-color: #31344e;
+}
+
+.header.fixed .header__inner {
+    padding: 15px 0;
+
+    border-bottom: 0;
+}
+
 .header__inner {
     display: flex;
     justify-content: space-between;
@@ -367,6 +381,15 @@ p {
     background-color: #53354a;
 }
 
+.reviews__slider {
+    height: 500px;
+    overflow: hidden;
+}
+
+.reviews__slider.slick-initialized {
+    height: auto;
+}
+
 .reviews__item {
     display: flex;
     flex-wrap: wrap;
@@ -411,6 +434,50 @@ p {
     font-weight: 700;
     text-transform: uppercase;
     color: #fff;
+}
+
+        /* SLICK */
+
+.slick-dots {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0 0 10px;
+    list-style: none;
+    width: 50%;
+
+
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+}
+
+.slick-dots li {
+    margin: 0 5px;
+}
+
+.slick-dots button {
+    width: 15px;
+    height: 15px;
+    background: #fff;
+    border-radius: 50%;
+    border: 0;
+    opacity: 0.5;
+    padding: 0;
+
+    cursor: pointer;
+
+    font-size: 0;
+    color: transparent;
+}
+
+.slick-dots button:focus {
+    outline: 0;
+}
+
+.slick-dots .slick-active button {
+    opacity: 1;
 }
 
         /* DOWNLOAD */
@@ -589,6 +656,23 @@ p {
 
     .nav {
         display: none;
+        flex-direction: column;
+        width: 100%;
+
+        background-color: #31344e;
+        text-align: right;
+
+        position: absolute;
+        top: 100%;
+        right: 0;
+    }
+
+    .nav.show {
+        display: flex;
+    }
+
+    .nav__link {
+        padding: 9px 15px;
     }
 
         /* BURGER */
@@ -695,6 +779,10 @@ p {
         right: -100px;
     }
 
+    .reviews__img.img {
+        right: -250px;
+    }
+
     .reviews__text {
         font-size: 25px;
     }
@@ -728,7 +816,7 @@ p {
 
 }
 
-                /* MEDIA MAX-WIDTH 767PX */
+                /* MEDIA MAX-WIDTH 414PX */
 
 @media (max-width: 414px) {
 
@@ -737,5 +825,9 @@ p {
     .reviews__img {
         right: -190px;
     } 
+
+    .reviews__img.img {
+        right: -340px;
+    }
 
 }
